@@ -1,6 +1,6 @@
 {
   "entity_damage": 8.0,
-  "durability_mass": 3.0,
+  "durability_mass": 8.0,
   "renders_invulnerable": false,
   "ignores_entity_armor": true,
   "gravity": -0.025,
